--- a/styling.css
+++ b/styling.css
@@ -2,12 +2,6 @@
 	margin: 0;
 	padding: 0;
 }
-/*body{
-	background-image: url("pictures.JPEG");
-	background-size: cover;
-	background-position: center;
-	
-}*/
 
 .nav{
 	background-color: white;
@@ -32,28 +26,16 @@
 }
 .logo img{
 	padding:0;
+	width: 130px;
+	height: 130px;
 }
 .nav_side{
 	float: right;
-	width: 50%;
+	width: 60%;
 margin-top: 20px;
 padding: 10px;
 
 }
-.search{
-	float: right;
-	width: 40%;
-	margin-top: 25px;
-}
-
-.search input{
-	width: 80%;
-	height: 30px;
-	background:#dbfef7;
-	border-radius: 5px;
-
-}
-
 .nav_side a{
 	text-decoration: none;
 	margin-right: 20px;
@@ -61,28 +43,59 @@ padding: 10px;
 	color: black;
 	font-weight: bold;
     font-family: cosmic,sans-serif;
-    font-size: 25px;
+    font-size: 28px;
     justify-content: center;
     text-align: center;
     align-content: center;
 }
 .nav_side a:hover{
-	color: blue;
-	text-decoration: underline;
-	transition: all 1s ease;
+	color: deepskyblue;
+	
+	
+	font-size: 30px;
+	
+	}
+.search{
+	float: right;
+	width: 30%;
+	margin-top: 25px;
+	
+
 }
+
+.search input{
+	width: 80%;
+	height: 40px;
+	background-color: lightskyblue;
+      border-radius: 5px;
+      font-size: 20px;
+      padding: 3px;
+      
+      
+
+}
+.search button{
+	height: 40px;
+	width:  25px;
+	background: #ddd;
+	border-radius: 5px;
+	font-size: 20px;
+
+}
+
+
 .main{
 	background-image: url("pictures.JPEG");
 	background-position: center;
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
-	height: 50vh;
-	margin-top: 80px;
+	height: 80vh;
+	margin-top: 90px;
 }
 
 .main .main_content{
-	padding-top: 100px;
+	padding-top: 110px;
 	margin-left: 10%;
 	margin-right: 10%;
 }
@@ -104,28 +117,32 @@ color:#0DB69C ;
 	line-height: 20px;
 }
 
-.main .main_content .btn{
-	margin-top: 50px;
-	text-align: center;
+.main .main_content .btn {
+	margin-top: 40px;
+	text-align:center;
+	margin-left: 520px;
+
 	
 }
 .main .main_content .btn a{
 	text-decoration: none;
 	margin-right: 50px;
 	padding:10px 20px;
-	background-color: #2C3E50;
+	font-size: 20px;
+	background-color: #0DB69C;
 	color: white;
 	font-family: cosmic,sans-serif;
 	text-align: center;
 	border: 2px solid white;
-	border-radius: 10px
+	border-radius: 10px;
+
 
 }
 .main .main_content .btn a:hover{
 background-color: black;
-color: orange;
+color: deepskyblue;
 border: none;
-border-bottom: 4px solid orange;
+border-bottom: 4px solid deepskyblue;
 
 
 }
@@ -178,29 +195,43 @@ border-bottom: 4px solid orange;
 }
 .product .product_container .item .item_content p{
 	margin: 20px;
-	font-size: 15px;
+	font-size: 17px;
+	opacity:0.8;
+	color: black;
 	margin-left: 0;
-	font-family: cosmmic,sans-serif ;
+	font-family: cosmic,sans-serif ;
+	line-height: 17px;
+	background-color: #56ACC8;
+	padding: 10px;
+	border-radius: 10px;
+	border-style: 2px solid;
+	
 	
 }
+.product .product_container .item .item_content p para{
+	display: none;
+	}
 .product .product_container .item .item_content a{
-	text-align: center;
-	margin-top:50px;
+	text-decoration: none;
+	margin-right: 50px;
 	padding:10px 20px;
-	background-color:blue; 
-	color:white;
-	font-family: cosmmic,sans-serif ;
+	font-size: 15px;
+	background-color: #0DB69C;
+	color: white;
+	font-family: cosmic,sans-serif;
 	text-align: center;
 	border: 2px solid white;
 	border-radius: 10px;
-	text-decoration: none;
+	margin-left: 50px;
+
 }
 .product .product_container .item .item_content a:hover{
 
 background-color: black;
-color: orange;
+color: deepskyblue;
 border: none;
-border-bottom: 4px solid orange;
+border-bottom: 4px solid deepskyblue;
+font-size: 15px;
 }
 
  .product_btn{
@@ -248,8 +279,8 @@ border-bottom: 4px solid orange;
 }
 
 .keypoint .key_container .key_content li{
-	margin: 10px;
-	padding: 10px;
+	margin: 5px;
+	padding: 5px;
 	list-style: none;
 	border-left: 2px solid orange;
 	color: black;
@@ -259,13 +290,13 @@ box-shadow: 0px 3px 65px 0px rgba(0, 0, 0, .15);
 .keypoint .key_container .key_content li a{
 	text-decoration: none;
 	text-align: center;
-	font-size: 20;
+	font-size: 20px;
 	}
 
 .keypoint .key_container .key_content li:hover{
 	border: 2px solid orange;
 	background-color: skyblue;
-	font-size: 20px;
+	font-size: 25px;
 	}
 .keypoint .key_container .key_image{
 	width: 40%;
@@ -306,13 +337,13 @@ box-shadow: 0px 3px 65px 0px rgba(0, 0, 0, .15);
 }
 .testi .testi_container .item .item_img{
 	width: 100%;
-	height: 100px;
+	height: 250px;
 	overflow: hidden;
 	text-align: center;
 }
 .testi .testi_container .item .item_img img{
-	width: 100px;
-	height: 100px;
+	width: 150px;
+	height: 150px;
 	border-radius: 50%;
 	
 }
@@ -362,8 +393,9 @@ box-shadow: 0px 3px 65px 0px rgba(0, 0, 0, .15);
 }
 .team .team_container .team_content p{
 	padding: 10px;
-	font-size: 15px;
+	font-size: 18px;
 	font-family: cosmic, sans-serif;
+	border: 10px solid skyblue;
 }
 .feed{
 background-image: url("img3.JPEG");
@@ -411,20 +443,56 @@ border-bottom: 4px solid orange;
 	}
 
 .about_us{
-	padding: 150px 40px 50px;
-
+	margin-top: 200px;
 }
+
 .about_us h2{
-	color: deepskyblue;
+	color: black;
 	font-size: 35px;
 	text-align: center;
 	padding: 10px;
-	font-family: cosmic, sans-serif ;
+	text-transform: uppercase;
+	
+
 }
-.about_us p{
+.about_us .about_container{
+	display: flex;
+	
+
+}
+.about_us .about_container .about_img {
+	width: 50%;
+	height: 500px;
+}
+.about_us .about_container .about_img img{
+	width: 90%;
+	height: 450px;
+	border: 10px solid skyblue;
+	padding : 10px;
+	margin: 10px;
+
+}
+.about_us .about_container .about_content {
 	padding: 10px;
-	font-size: 15px;
+	background-color: lightskyblue;
+	width: 50%;
+	margin: 10px;
+}
+.about_us .about_container .about_content h2{
+	color: black;
+	font-size: 35px;
+	text-align: center;
+	padding: 10px;
+	text-transform: uppercase;
+
+}
+.about_us .about_container .about_content p{
+	font-size: 20px;
 	font-family: cosmic, sans-serif;
+	border: 5px solid skyblue;
+	background-color: lightskyblue;
+
+
 }
 .contact_container{
 	padding: 150px 80px 50px;
